[package]
name = "closer-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
fend-core = "1.5.5"
futures = "0.3.31"
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16"] }
gtk-layer-shell = { version = "0.4.0", package = "gtk4-layer-shell" }
hyprland = "0.4.0-beta.2"
itertools = "0.13.0"
maplit = "1.0.2"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
relm4 = "0.9.1"
serde = "1.0.216"
tokio = { version = "1.42.0", features = ["time"] }
tokio-util = "0.7.13"
toml = "0.8.19"
